...
                android:textSize="16sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login2"
                android:text=" Login"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#58432E" />
        </LinearLayout>

...
